force-app/main/default/objects/Contact/fields/AA__c.field-meta.xml
<CustomField>
    <fullName>AA__c</fullName>
    <description>Mass Mutual Layout, Manual Entry</description>
    <label>AA #</label>
    <length>6</length>
    <type>Text</type>
</CustomField>