force-app/main/default/objects/Contact/fields/AE__c.field-meta.xml
<CustomField>
    <fullName>AE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RTO_Agents</relationshipName>
    <type>Lookup</type>
</CustomField>