force-app/main/default/objects/Contact/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <label>Affiliations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AREAA</fullName>
            </value>
            <value>
                <fullName>CRS</fullName>
            </value>
            <value>
                <fullName>MVAREP</fullName>
            </value>
            <value>
                <fullName>NAGLREP</fullName>
            </value>
            <value>
                <fullName>NAHREP</fullName>
            </value>
            <value>
                <fullName>NAR</fullName>
            </value>
            <value>
                <fullName>NAREB</fullName>
            </value>
            <value>
                <fullName>REBI</fullName>
            </value>
            <value>
                <fullName>RLI</fullName>
            </value>
            <value>
                <fullName>WCR</fullName>
            </value>
            <value>
                <fullName>WERC</fullName>
            </value>
            <value>
                <fullName>RDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>