force-app/main/default/objects/Contact/fields/AGENT_COUNT__c.field-meta.xml
<CustomField>
    <fullName>AGENT_COUNT__c</fullName>
    <formula>IF( RecordType.Name = &quot;Rocket Pro Influencer&quot;, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AGENT COUNT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>