force-app/main/default/objects/Contact/fields/Agent_License_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Agent_License_Expiration_Date__c</fullName>
    <label>Agent License Expiration Date</label>
    <type>Date</type>
</CustomField>