force-app/main/default/objects/Contact/fields/Agent_Logged_into_Workday__c.field-meta.xml
<CustomField>
    <fullName>Agent_Logged_into_Workday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent Logged into Workday</label>
    <type>Checkbox</type>
</CustomField>