force-app/main/default/objects/Contact/fields/Agent_or_TM_in_an_Agent_Office__c.field-meta.xml
<CustomField>
    <fullName>Agent_or_TM_in_an_Agent_Office__c</fullName>
    <label>Agent or TM in an Agent Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Team Member operating in an Agent office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>