force-app/main/default/objects/Contact/fields/Agent_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Agent_Type_Formula__c</fullName>
    <formula>IF( Number_of_Broker_Licenses__c &gt; 0, &quot;Broker&quot;,IF(TEXT(Do_you_have_TMs_originating__c) = &quot;Yes&quot;, &quot;Broker&quot;, IF( State_Type__c = &quot;Broker&quot;, &quot;Broker&quot;,&quot;MLO&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Type</label>
    <type>Text</type>
</CustomField>