force-app/main/default/objects/Contact/fields/Approved_State_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Approved_State_Licenses__c</fullName>
    <label>Approved State Licenses</label>
    <summaryFilterItems>
        <field>License__c.State_License_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>License__c.Agent_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>