force-app/main/default/objects/Contact/fields/Are_you_part_of_a_real_estate_brokerage__c.field-meta.xml
<CustomField>
    <fullName>Are_you_part_of_a_real_estate_brokerage__c</fullName>
    <label>Are you part of a real estate brokerage?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>