force-app/main/default/objects/Contact/fields/Are_your_TM_currently_mortgage_licensed__c.field-meta.xml
<CustomField>
    <fullName>Are_your_TM_currently_mortgage_licensed__c</fullName>
    <label>Are your TM currently mortgage licensed?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Do_you_have_TMs_originating__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>