force-app/main/default/objects/Contact/fields/Assigned_Market_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Market_Manager__c</fullName>
    <formula>IF(RecordType.DeveloperName = &apos;Corporate&apos;, 
(MailingStateLookup__r.Market_Manager_Corporate__r.FirstName + &apos; &apos; + MailingStateLookup__r.Market_Manager_Corporate__r.LastName),
(MailingStateLookup__r.Market_Manager_Real_Estate__r.FirstName + &apos; &apos; + MailingStateLookup__r.Market_Manager_Real_Estate__r.LastName)
)</formula>
    <label>Assigned Market Manager</label>
    <type>Text</type>
</CustomField>