force-app/main/default/objects/Contact/fields/Assigned_Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Relationship_Manager__c</fullName>
    <formula>MailingStateLookup__r.Relationship_Manager__r.FirstName + &apos; &apos; + MailingStateLookup__r.Relationship_Manager__r.LastName</formula>
    <label>Assigned Relationship Manager</label>
    <type>Text</type>
</CustomField>