force-app/main/default/objects/Contact/fields/Assistant_Name__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assistant Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>