force-app/main/default/objects/Contact/fields/Attended_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Attended_Implementation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attended Implementation</label>
    <type>Checkbox</type>
</CustomField>