force-app/main/default/objects/Contact/fields/Banker_Activity__c.field-meta.xml
<CustomField>
    <fullName>Banker_Activity__c</fullName>
    <label>Banker Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Contacted</fullName>
                <default>true</default>
                <label>Not Contacted</label>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>