force-app/main/default/objects/Contact/fields/Best_Time_to_Reach_Out__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_to_Reach_Out__c</fullName>
    <label>Best Time to Reach Out</label>
    <type>Time</type>
</CustomField>