force-app/main/default/objects/Contact/fields/Branch_NMLS_ID__c.field-meta.xml
<CustomField>
    <fullName>Branch_NMLS_ID__c</fullName>
    <formula>Branch__r.NMLS_Branch_ID__c</formula>
    <label>Branch NMLS ID</label>
    <type>Text</type>
</CustomField>