force-app/main/default/objects/Contact/fields/Broker_Communication_Flag__c.field-meta.xml
<CustomField>
    <fullName>Broker_Communication_Flag__c</fullName>
    <formula>IF( Broker_Communication_Verified__c = FALSE, IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red Flag&quot;),&quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Communication Flag</label>
    <type>Text</type>
</CustomField>