force-app/main/default/objects/Contact/fields/Broker_Communication_Verified__c.field-meta.xml
<CustomField>
    <fullName>Broker_Communication_Verified__c</fullName>
    <formula>NOT((ISPICKVAL(Are_you_currently_licensed__c,&quot;&quot;)
 || 
ISPICKVAL(Do_you_have_TMs_originating__c,&quot;&quot;)
|| 
ISPICKVAL(Do_you_have_your_Broker_Licensed__c,&quot;&quot;)
|| 
ISPICKVAL(Mortgage_Licensed__c,&quot;&quot;)
|| 
ISPICKVAL(Do_you_plan_to_self_service__c,&quot;&quot;)

||  
ISNULL(How_many_years_of_mortgage_experience_do__c) 
||
 ISPICKVAL(Originated_mortgages_with_State_Farm__c,&quot;&quot;)  
||
ISPICKVAL(Consent_To_Text__c,&quot;None&quot;)) &amp;&amp; (Agent_Type_Formula__c = &quot;Broker&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Communication Verified?</label>
    <type>Checkbox</type>
</CustomField>