force-app/main/default/objects/Contact/fields/Broker_Import_File__c.field-meta.xml
<CustomField>
    <fullName>Broker_Import_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Import File</label>
    <referenceTo>Broker_Import_File__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>