force-app/main/default/objects/Contact/fields/Broker_License_Required__c.field-meta.xml
<CustomField>
    <fullName>Broker_License_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broker License Required?</label>
    <type>Checkbox</type>
</CustomField>