force-app/main/default/objects/Contact/fields/Call_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Call_Conversion__c</fullName>
    <formula>IF( Number_of_Calls__c &gt; 0,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Conversion</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>