force-app/main/default/objects/Contact/fields/Certificate_of_Good_Standing__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Good_Standing__c</fullName>
    <label>Certificate of Good Standing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Sent to State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>