force-app/main/default/objects/Contact/fields/Company_NMLS__c.field-meta.xml
<CustomField>
    <fullName>Company_NMLS__c</fullName>
    <inlineHelpText>Broker NMLS Number</inlineHelpText>
    <label>Company NMLS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>