force-app/main/default/objects/Contact/fields/Confirmed_Next_Steps_with_Client__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Next_Steps_with_Client__c</fullName>
    <description>Checkbox to acknowledge that if the contact chooses to self service that they know the next steps. This field is a dependency of the Self-Service field</description>
    <label>Confirmed Next Steps with Client?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Do_you_plan_to_self_service__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>