force-app/main/default/objects/Contact/fields/Consent_To_Text__c.field-meta.xml
<CustomField>
    <fullName>Consent_To_Text__c</fullName>
    <inlineHelpText>The contact has agreed to be texted by QL</inlineHelpText>
    <label>Consent To Text</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>