force-app/main/default/objects/Contact/fields/Consent_To_Text_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_To_Text_Date__c</fullName>
    <label>Consent To Text Date</label>
    <type>Date</type>
</CustomField>