force-app/main/default/objects/Contact/fields/Contact_Website__c.field-meta.xml
<CustomField>
    <fullName>Contact_Website__c</fullName>
    <label>Contact Website</label>
    <length>100</length>
    <type>Text</type>
</CustomField>