force-app/main/default/objects/Contact/fields/CTI_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>CTI_Mobile_Phone__c</fullName>
    <formula>IF(ISBLANK(MobilePhone), &quot;&quot;, HYPERLINK(&quot;/apex/CallPopup?WhoId=&quot; &amp; Id &amp; &quot;&amp;PhoneNumber=&quot; &amp; MobilePhone, IMAGE(&quot;/img/btn_dial_inline.gif&quot;, &quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dial Mobile Phone</label>
    <type>Text</type>
</CustomField>