force-app/main/default/objects/Contact/fields/CTI_Phone__c.field-meta.xml
<CustomField>
    <fullName>CTI_Phone__c</fullName>
    <description>Link to make CTI phone call</description>
    <formula>HYPERLINK(&quot;/apex/CallPopup?WhoId=&quot; &amp; Id &amp; &quot;&amp;PhoneNumber=&quot; &amp; Phone, IMAGE(&quot;img/btn_dial_inline.gif&quot;, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CTI Phone</label>
    <type>Text</type>
</CustomField>