force-app/main/default/objects/Contact/fields/Days_in_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Onboarding_Status__c</fullName>
    <formula>TODAY() - DATEVALUE(Onboarding_Status_Last_Modified_Date__c)</formula>
    <label>Days in Onboarding Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>