force-app/main/default/objects/Contact/fields/Designated_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Designated_Mailing_Address__c</fullName>
    <formula>IF(ISPICKVAL( Mailing_Address__c, &quot;Office&quot;), Office_Address__c ,IF(ISPICKVAL( Mailing_Address__c, &quot;Home&quot;), Home_Address__c, NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Designated Mailing Address</label>
    <type>Text</type>
</CustomField>