force-app/main/default/objects/Contact/fields/Do_you_have_your_Broker_Licensed__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_your_Broker_Licensed__c</fullName>
    <label>Do you have your Broker Licensed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>