force-app/main/default/objects/Contact/fields/Do_you_plan_to_self_service__c.field-meta.xml
<CustomField>
    <fullName>Do_you_plan_to_self_service__c</fullName>
    <label>Do you plan to self-service?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>