force-app/main/default/objects/Contact/fields/Email_Other__c.field-meta.xml
<CustomField>
    <fullName>Email_Other__c</fullName>
    <description>This is an additional email for broker owner contacts</description>
    <label>Email Other</label>
    <type>Email</type>
</CustomField>