force-app/main/default/objects/Contact/fields/Entity_Bank_Set_up__c.field-meta.xml
<CustomField>
    <fullName>Entity_Bank_Set_up__c</fullName>
    <label>Entity / Bank Set up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>