force-app/main/default/objects/Contact/fields/ERC_Fall__c.field-meta.xml
<CustomField>
    <fullName>ERC_Fall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ERC Fall</label>
    <type>Checkbox</type>
</CustomField>