force-app/main/default/objects/Contact/fields/ERC_Spring1__c.field-meta.xml
<CustomField>
    <fullName>ERC_Spring1__c</fullName>
    <label>ERC Spring 2019</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>