force-app/main/default/objects/Contact/fields/ERC_Spring__c.field-meta.xml
<CustomField>
    <fullName>ERC_Spring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ERC Spring</label>
    <type>Checkbox</type>
</CustomField>