force-app/main/default/objects/Contact/fields/Exam_Required__c.field-meta.xml
<CustomField>
    <fullName>Exam_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exam Required</label>
    <type>Checkbox</type>
</CustomField>