force-app/main/default/objects/Contact/fields/Fair_Lending_Training_Date_Acquired__c.field-meta.xml
<CustomField>
    <fullName>Fair_Lending_Training_Date_Acquired__c</fullName>
    <label>Fair Lending Training Date Acquired</label>
    <type>Date</type>
</CustomField>