force-app/main/default/objects/Contact/fields/Fair_Lending_Training_Score__c.field-meta.xml
<CustomField>
    <fullName>Fair_Lending_Training_Score__c</fullName>
    <label>Fair Lending Training Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>