force-app/main/default/objects/Contact/fields/Fair_Lending_Training_Status__c.field-meta.xml
<CustomField>
    <fullName>Fair_Lending_Training_Status__c</fullName>
    <label>Fair Lending Training Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Not Evaluated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>