force-app/main/default/objects/Contact/fields/Filing_Status__c.field-meta.xml
<CustomField>
    <fullName>Filing_Status__c</fullName>
    <label>Filing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Filing Created</fullName>
            </value>
            <value>
                <fullName>Agent Attested to Filing</fullName>
            </value>
            <value>
                <fullName>Filing Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>