force-app/main/default/objects/Contact/fields/Filing_Submitted_Completed__c.field-meta.xml
<CustomField>
    <fullName>Filing_Submitted_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filing Submitted/Completed</label>
    <type>Checkbox</type>
</CustomField>