force-app/main/default/objects/Contact/fields/Fingerprint_Forms__c.field-meta.xml
<CustomField>
    <fullName>Fingerprint_Forms__c</fullName>
    <label>Fingerprint Forms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Sent to State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>