force-app/main/default/objects/Contact/fields/Fingerprints_Completed__c.field-meta.xml
<CustomField>
    <fullName>Fingerprints_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fingerprints Completed</label>
    <type>Checkbox</type>
</CustomField>