force-app/main/default/objects/Contact/fields/Fingerprints_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Fingerprints_Expiration_Date__c</fullName>
    <label>Fingerprints Expiration Date</label>
    <type>DateTime</type>
</CustomField>