force-app/main/default/objects/Contact/fields/Fingerprints_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Fingerprints_Renewal_Date__c</fullName>
    <label>Fingerprints Renewal Date</label>
    <type>DateTime</type>
</CustomField>