force-app/main/default/objects/Contact/fields/Fingerprints_Status__c.field-meta.xml
<CustomField>
    <fullName>Fingerprints_Status__c</fullName>
    <label>Fingerprints Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>