force-app/main/default/objects/Contact/fields/Fingerprints_Successfully_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Fingerprints_Successfully_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fingerprints Successfully Scheduled</label>
    <type>Checkbox</type>
</CustomField>