force-app/main/default/objects/Contact/fields/First_Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Referral_Date__c</fullName>
    <label>First Referral Date</label>
    <type>Date</type>
</CustomField>