force-app/main/default/objects/Contact/fields/Gift_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Gift_Restriction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gift Restriction</label>
    <type>Checkbox</type>
</CustomField>