force-app/main/default/objects/Contact/fields/Gift_Restriction_Details__c.field-meta.xml
<CustomField>
    <fullName>Gift_Restriction_Details__c</fullName>
    <description>Details of gift restrictions</description>
    <inlineHelpText>Details of gift restrictions</inlineHelpText>
    <label>Gift Restriction Details</label>
    <length>250</length>
    <type>Text</type>
</CustomField>