force-app/main/default/objects/Contact/fields/Has_Call_or_F2F__c.field-meta.xml
<CustomField>
    <fullName>Has_Call_or_F2F__c</fullName>
    <formula>Number_of_Calls__c + Number_of_F2Fs__c &gt; 0</formula>
    <label>Had Call or F2F</label>
    <type>Checkbox</type>
</CustomField>