force-app/main/default/objects/Contact/fields/Historical_Products_and_Pricing_Training__c.field-meta.xml
<CustomField>
    <fullName>Historical_Products_and_Pricing_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Agents that were required to take the Knowledge Assessment training, Mortgage Basics training, or training was not required at time of onboarding. Equivalent to completing Products and Pricing training for purpose of RTO.</description>
    <inlineHelpText>Agents that were required to take the Knowledge Assessment training, Mortgage Basics training, or training was not required at time of onboarding. Equivalent to completing Products and Pricing training for purpose of RTO.</inlineHelpText>
    <label>Historical Products and Pricing Training</label>
    <type>Checkbox</type>
</CustomField>