force-app/main/default/objects/Contact/fields/Homeowner_Policies__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_Policies__c</fullName>
    <label>Homeowner Policies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>