force-app/main/default/objects/Contact/fields/Homeowner_Policies_Date_Modified__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_Policies_Date_Modified__c</fullName>
    <label>Homeowner Policies Date Modified</label>
    <type>DateTime</type>
</CustomField>