force-app/main/default/objects/Contact/fields/Hours_in_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Hours_in_Onboarding_Status__c</fullName>
    <formula>FLOOR((NOW() - (Onboarding_Status_Last_Modified_Date__c)) * 24)</formula>
    <label>Hours in Onboarding Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>