force-app/main/default/objects/Contact/fields/How_Many_W_2s__c.field-meta.xml
<CustomField>
    <fullName>How_Many_W_2s__c</fullName>
    <label>How Many W-2s</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>