force-app/main/default/objects/Contact/fields/How_many_years_of_mortgage_experience__c.field-meta.xml
<CustomField>
    <fullName>How_many_years_of_mortgage_experience__c</fullName>
    <description>Use this field for the initial interaction for PDM&apos;s while engaging the Brokers if forgotten.</description>
    <label>How many years of mortgage experience?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>